stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0308]: mismatched types
  --> src/lib.rs:27:9
   |
26 |     match roll {
   |           ---- this expression has type `char`
27 |         "/"=>0
   |         ^^^ expected `char`, found `&str`
   |
help: if you meant to write a `char` literal, use single quotes
   |
27 |         '/'=>0
   |         ~~~

For more information about this error, try `rustc --explain E0308`.
error: could not compile `hiker` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `hiker` (lib test) due to 1 previous error
